Added notification on LoanDetail for the reason if the user can't loan a book (>3 loans, overdue loan, book lost/destroyed, no book selected.)

--- a/src/i18n/messages.properties
+++ b/src/i18n/messages.properties
@@ -1,15 +1,17 @@
 #Eclipse messages class
-#Tue Nov 26 11:08:18 CET 2013
-BookDetail.btnAdd.text=Add Copy
-BookDetail.btnRemove.text=Delete
-BookDetail.btnRemoveCopy.text=Remove selected
-BookDetail.btnReset.text=Reset
-BookDetail.btnSave.text=Save
+#Tue Dec 03 13:50:20 CET 2013
+BookDetail.CantDeleteLentCopy.text=This copy is currently lent and cannot be deleted.
+BookDetail.CantDeleteLentCopy.title=Copy is lent
 BookDetail.btnAdd.desc=Add a copy of this book to the library
-BookDetail.btnRemove.desc=Delete this book and all of its copies. It's not possible to remove a book if copies are currently lent!
-BookDetail.btnRemoveCopy.desc=Remove selected copies. Careful, it's not possible to delete the last copy of a book or a lent copy!
+BookDetail.btnAdd.text=Add Copy
+BookDetail.btnRemove.desc=Delete this book and all of its copies. It's not possible to remove a book if copies are currently lent\!
+BookDetail.btnRemove.text=Delete
+BookDetail.btnRemoveCopy.desc=Remove selected copies. Careful, it's not possible to delete the last copy of a book or a lent copy\!
+BookDetail.btnRemoveCopy.text=Remove selected
 BookDetail.btnReset.desc=Revert changes
+BookDetail.btnReset.text=Reset
 BookDetail.btnSave.desc=Save changes
+BookDetail.btnSave.text=Save
 BookDetail.deleteDlg.message=Do you really want to delete this book? This also deletes all of its copies. This action cannot be reversed.
 BookDetail.deleteDlg.title=Are you sure?
 BookDetail.lblAmount.text=Amount\: $PARAM
@@ -20,21 +22,18 @@ BookDetail.lblTitle.text=Title
 BookDetail.pnlInformation.borderTitle=Book Information
 BookDetail.pnlSpecimensEdit.borderTitle=Copies
 BookDetail.this.title=Book Detail\: $PARAM
-BookDetail.CantDeleteLentCopy.text=This copy is currently lent and cannot be deleted.
-BookDetail.CantDeleteLentCopy.title=Copy is lent
 BookMaster.Tab.Books=Books (1)
 BookMaster.Tab.Books.desc=Shows an overview over all books that are currently in the library
 BookMaster.Tab.Loans=Loans (2)
 BookMaster.Tab.Loans.desc=Shows an overview over all current and past loans
-BookMaster.txtSearch.desc=Search library for a certain text
-BookMaster.btnAddNewBook.text=Add Book
 BookMaster.btnAddNewBook.desc=Add a new Book
-BookMaster.btnAddNewLoan.text=Add Loan
+BookMaster.btnAddNewBook.text=Add Book
 BookMaster.btnAddNewLoan.desc=Add a new Loan
-BookMaster.btnShowSelected.text=Show selected
+BookMaster.btnAddNewLoan.text=Add Loan
 BookMaster.btnShowSelected.desc=Show the books that have been selected in the list
-BookMaster.btnShowSelectedLoans.text=Show selected
+BookMaster.btnShowSelected.text=Show selected
 BookMaster.btnShowSelectedLoans.desc=Show the loans that have been selected in the list
+BookMaster.btnShowSelectedLoans.text=Show selected
 BookMaster.lblChosen.text=Selected\: $PARAM
 BookMaster.lblNrOfBooks.text=Nr of books\: $PARAM
 BookMaster.lblNrOfCopies.text=Nr of copies\: $PARAM
@@ -43,6 +42,7 @@ BookMaster.pnlBookInventoryStats.borderTitle=Inventory Statistics
 BookMaster.pnlInventoryStats.borderTitle=Inventory statistics
 BookMaster.pnlLoansInventoryStats.borderTitle=Loans statistics
 BookMaster.tbsMain.toolTipText=tooltip
+BookMaster.txtSearch.desc=Search library for a certain text
 BookMasterLoanTable.ColumnHeader.CopyID=Copy ID
 BookMasterLoanTable.ColumnHeader.LentTo=Lent to
 BookMasterLoanTable.ColumnHeader.LentUntil=Return Date
@@ -62,6 +62,8 @@ BookMasterTable.lblNrOfCurrentLoans.text=Current Loans\: $PARAM
 BookMasterTable.lblNrOfDueLoans.text=Due Loans\: $PARAM
 BookMasterTable.lblNrOfLoans.text=Nr. of Loans\: $PARAM
 BookMasterTable.pnlLoansInventory.TitledBorder.text=Registered Loans
+BookMasterTable.showAvailable.desc=Show or Hide Unavailable Books
+BookMasterTable.showAvailable.text=Show Unavailable
 BookMasterTable.showUnavailableMenuItem.text=Show Completed
 BookMasterTable.textField.text=Search
 BookMasterTable.txtSearch.text=Search
@@ -69,8 +71,8 @@ BookMasterTable.viewMenu.text=View
 BookMastertable.BookTableModes.All=All
 BookMastertable.BookTableModes.LentOnly=Lent only
 BookMastertable.BookTableModes.OverdueOnly=Overdue only
-BookMasterTable.showAvailable.text=Show Unavailable
-BookMasterTable.showAvailable.desc=Show or Hide Unavailable Books
+Common.No=No
+Common.Yes=Yes
 Copy.Condition.DAMAGED=Damaged
 Copy.Condition.GOOD=Good
 Copy.Condition.LOST=Lost
@@ -78,79 +80,83 @@ Copy.Condition.NEW=New
 Copy.Condition.WASTE=Waste
 CopyTable.ColHeader.Condition=Condition
 CustomerDetail.City=City
+CustomerDetail.CustomerInfo.border.title=Customer Details
 CustomerDetail.CustomerNo=ID
 CustomerDetail.Name=Name
 CustomerDetail.Street=Street
 CustomerDetail.Surname=Surname
 CustomerDetail.Zip=ZIP
 CustomerDetail.btnCancel.text=Cancel
-CustomerDetail.btnDelete.text=Delete Customer
 CustomerDetail.btnDelete.desc=Deletes this customer
-CustomerDetail.btnReset.text=Reset
-CustomerDetail.btnSave.text=Save
+CustomerDetail.btnDelete.text=Delete Customer
 CustomerDetail.btnReset.desc=Revert changes
+CustomerDetail.btnReset.text=Reset
 CustomerDetail.btnSave.desc=Save changes
+CustomerDetail.btnSave.text=Save
+CustomerDetail.deleteDlg.error=This customer can't be deleted because he has some lent books.
 CustomerDetail.deleteDlg.message=Do you really want to delete this customer? This action cannot be reversed.
 CustomerDetail.deleteDlg.title=Are you sure?
-CustomerDetail.deleteDlg.error=This customer can't be deleted because he has some lent books.
 CustomerDetail.this.title=Customer Details\: $PARAM
-CustomerDetail.CustomerInfo.border.title=Customer Details
 CustomerMasterTable.ColumnHeader.Address=Address
 CustomerMasterTable.ColumnHeader.CustomerNo=Customer No.
 CustomerMasterTable.ColumnHeader.Name=Name
 CustomerTab.CustomerStats.Title=Customer Details
-CustomerTab.btnAddNewCustomer.text=New Customer
 CustomerTab.btnAddNewCustomer.desc=Add a new customer
-CustomerTab.btnShowSelected.text=Show selected
+CustomerTab.btnAddNewCustomer.text=New Customer
 CustomerTab.btnShowSelected.desc=Show the customer that has been selected in the customer list
+CustomerTab.btnShowSelected.text=Show selected
 CustomerTab.lblNrOfCustomers.text=Nr of customers\: $PARAM
-Customertab.pnlCustomerInventory.borderTitle=Customer List
 CustomerTab.txtSearch.desc=Search the customer list for a certain text
+Customertab.pnlCustomerInventory.borderTitle=Customer List
+DetailDialogs.btnClose.desc=Close the detail window, disregard changes
+DetailDialogs.btnClose.text=Close
 Library.DateFormat=mm/dd/yy
-LoansTab.cmbLoanTableModes.desc=Show different groups of loans
-LoansTab.txtSearchLoans.desc=Search Loans for a certain text
 LoanDetail.CustomerSelection.text=Customer Selection
+LoanDetail.LoanOverdueDialog.text=This loan is overdue. The customer has to pay 3.- CHF.
+LoanDetail.LoanOverdueDialog.title=Overdue loan\!
 LoanDetail.LoansOfCustomer.text=Loans of $PARAM
+LoanDetail.addLoanBtn.desc=Lend this copy to this customer. Attention\: Customer can't have an overdue or more than 3 loans\!
 LoanDetail.addLoanBtn.text=Lend copy
-LoanDetail.addLoanBtn.desc=Lend this copy to this customer. Attention: Customer can't have an overdue or more than 3 loans!
-LoanDetail.cmbCustomer.desc=Select a customer to view their loans/create a new loan for this customer
 LoanDetail.btnCopy.text=Find
+LoanDetail.cmbCustomer.desc=Select a customer to view their loans/create a new loan for this customer
 LoanDetail.lblCopyId.text=Copy ID
 LoanDetail.lblCustomer.text=Customer
 LoanDetail.lblCustomerId.text=CustomerID
+LoanDetail.lblNewLabel.text=New label
 LoanDetail.lblReturnDate.text=Return Date
-LoanDetail.pnlCopies.title=Copies
 LoanDetail.loanNewTitle.text=Loan New Title
-LoanDetail.txtSearch.desc=Search available copies for a certain text
 LoanDetail.nrOfLoansOfCustomer.text=Nr of loans\: $PARAM
-LoanDetail.returnCopyBtn.text=Return selected book
+LoanDetail.pnlCopies.title=Copies
 LoanDetail.returnCopyBtn.desc=Returns the selected book back to the library and removes the customer's open loan
+LoanDetail.returnCopyBtn.text=Return selected book
+LoanDetail.returnDateLabel.text=Return Date\: $PARAM
 LoanDetail.this.title=Loan Detail
-LoanDetail.returnDateLabel.text=Return Date: $PARAM
-LoanDetail.LoanOverdueDialog.text=This loan is overdue. The customer has to pay 3.- CHF.
-LoanDetail.LoanOverdueDialog.title=Overdue loan!
+LoanDetail.txtSearch.desc=Search available copies for a certain text
 LoanTable.CellContent.Available=Available
 LoanTable.CellContent.Lent=Lent
 LoanTable.CellContent.OK=OK
 LoanTable.CellContent.Old=Returned
 LoanTable.CellContent.Overdue=Overdue
-MainView.Tab.Customers=Customers (3)
-MainView.Tab.Customers.desc=Shows an overview over all customers
-MainView.btnExit.text=Exit
-MainView.btnExit.desc=Close the application, disregard all unsaved changes
-MainView.Menu.File.title=File
-MainView.Menu.Help.title=Help
-MainView.Menu.Help.about=About
-MainView.Menu.Help.help=Show Help
+LoansTab.cmbLoanTableModes.desc=Show different groups of loans
+LoansTab.txtSearchLoans.desc=Search Loans for a certain text
 MainView.AboutDlg.text=This application was created in Nov./Dec. 2013 by Pascal Forster & Philipp Christen for a mini project for User Interfaces I at the HSR.
 MainView.AboutDlg.title=About this Application
-MainView.HelpDlg.text=<html> <style type="text/css"> .tftable {font-size:10px;color:#000000;width:100%;border-width: 1px;border-color: #000000;border-collapse: collapse;} .tftable th {font-size:10px;background-color:#E0E0E0;border-width: 1px;padding: 2px 8px;border-style: solid;border-color: #DDDDDD;text-align:left;} .tftable td {font-size:10px;border-width: 1px;padding: 8px;border-style: solid;border-color: #DDDDDD;} </style> <table class="tftable" border="1"> <tr> <th>Component</th> <th>Info</th> <th>Shortcut</th> </tr> <tr> <td>Search Field</td> <td>Enter text to find a book/customer/loan.</td> <td>Alt-F</td> </tr> <tr> <td>Add ...</td> <td>Adds a new book/loan/customer</td> <td>Alt-N</td> </tr> <tr> <td>Show selected ...</td> <td>Shows the selected book(s), loan or customer in a separate window</td> <td>Alt-S, Enter</td> </tr> <tr> <td>Reset</td> <td>Disregards changes that the used made.</td> <td>Alt-R</td> </tr> <tr> <td>Save</td> <td>Saves changes that the user made</td> <td>Alt-S</td> </tr> <tr> <td>Delete</td> <td>Deletes the currently opened book/loan/customer</td> <td>Alt-D</td> </tr> <tr> <td>Close</td> <td>Closes the currently opened window. Unsaved changes will be discarded without asking.</td> <td>Alt-C, Escape, Alt-F4</td> </tr> <tr> <td></td> <td></td> <td></td> </tr> </table> </html>
+MainView.HelpDlg.text=<html> <style type\="text/css"> .tftable {font-size\:10px;color\:\#000000;width\:100%;border-width\: 1px;border-color\: \#000000;border-collapse\: collapse;} .tftable th {font-size\:10px;background-color\:\#E0E0E0;border-width\: 1px;padding\: 2px 8px;border-style\: solid;border-color\: \#DDDDDD;text-align\:left;} .tftable td {font-size\:10px;border-width\: 1px;padding\: 8px;border-style\: solid;border-color\: \#DDDDDD;} </style> <table class\="tftable" border\="1"> <tr> <th>Component</th> <th>Info</th> <th>Shortcut</th> </tr> <tr> <td>Search Field</td> <td>Enter text to find a book/customer/loan.</td> <td>Alt-F</td> </tr> <tr> <td>Add ...</td> <td>Adds a new book/loan/customer</td> <td>Alt-N</td> </tr> <tr> <td>Show selected ...</td> <td>Shows the selected book(s), loan or customer in a separate window</td> <td>Alt-S, Enter</td> </tr> <tr> <td>Reset</td> <td>Disregards changes that the used made.</td> <td>Alt-R</td> </tr> <tr> <td>Save</td> <td>Saves changes that the user made</td> <td>Alt-S</td> </tr> <tr> <td>Delete</td> <td>Deletes the currently opened book/loan/customer</td> <td>Alt-D</td> </tr> <tr> <td>Close</td> <td>Closes the currently opened window. Unsaved changes will be discarded without asking.</td> <td>Alt-C, Escape, Alt-F4</td> </tr> <tr> <td></td> <td></td> <td></td> </tr> </table> </html>
 MainView.HelpDlg.title=Help
+MainView.Menu.File.title=File
+MainView.Menu.Help.about=About
 MainView.Menu.Help.aboutDesc=General information about this application
+MainView.Menu.Help.help=Show Help
 MainView.Menu.Help.helpDesc=Shows a small help to get you started
-DetailDialogs.btnClose.text=Close
-DetailDialogs.btnClose.desc=Close the detail window, disregard changes
+MainView.Menu.Help.title=Help
+MainView.Tab.Customers=Customers (3)
+MainView.Tab.Customers.desc=Shows an overview over all customers
+MainView.btnExit.desc=Close the application, disregard all unsaved changes
+MainView.btnExit.text=Exit
 MainView.title=Bibliotheca
 Splash.Loading.text=Loading... Please wait.
-Common.Yes=Yes
-Common.No=No
+LoanDetail.lblWarning.text=Attention: $PARAM
+LoanDetail.lblWarning.tooMany=Too many loans!
+LoanDetail.lblWarning.overdue=Overdue loan!
+LoanDetail.lblWarning.bookLost=Copy should not be lend!
+LoanDetail.lblWarning.noneSelected=No copy selected!
