--- a/src/i18n/messages_de_CH.properties
+++ b/src/i18n/messages_de_CH.properties
@@ -154,3 +154,8 @@ LoanDetail.addLoanBtn.desc=Leihe dieses Exemplar an einen bestimmten Kunden aus.
 Splash.Loading.text=Wird geladen... Bitte warten.
 Common.Yes=Ja
 Common.No=Nein
+LoanDetail.lblWarning.text=Achtung: $PARAM
+LoanDetail.lblWarning.tooMany=Zuviele Ausleihen!
+LoanDetail.lblWarning.overdue=Überfällige Ausleihe!
+LoanDetail.lblWarning.bookLost=Exemplar nicht verfügbar!
+LoanDetail.lblWarning.noneSelected=Kein Exemplar ausgewählt!
