Added Mnemonic on "remove copy" in bookDetail

--- a/src/i18n/messages.properties
+++ b/src/i18n/messages.properties
@@ -6,8 +6,8 @@ BookDetail.btnAdd.desc=Add a copy of this book to the library
 BookDetail.btnAdd.text=Add Copy
 BookDetail.btnRemove.desc=Delete this book and all of its copies. It's not possible to remove a book if copies are currently lent\!
 BookDetail.btnRemove.text=Delete
-BookDetail.btnRemoveCopy.desc=Remove selected copies. Careful, it's not possible to delete the last copy of a book or a lent copy\!
-BookDetail.btnRemoveCopy.text=Remove selected
+BookDetail.btnRemoveCopy.desc=Remove selected copy. Careful, it's not possible to delete the last copy of a book or a lent copy\!
+BookDetail.btnRemoveCopy.text=Remove Copy
 BookDetail.btnReset.desc=Revert changes
 BookDetail.btnReset.text=Reset
 BookDetail.btnSave.desc=Save changes
