--- a/src/i18n/messages_de_CH.properties
+++ b/src/i18n/messages_de_CH.properties
@@ -2,7 +2,7 @@
 #Sun Nov 17 13:16:44 CET 2013
 BookDetail.btnAdd.text=Exemplar hinzuf\u00FCgen
 BookDetail.btnRemove.text=L\u00F6schen
-BookDetail.btnRemoveCopy.text=Ausgew\u00E4hlte entfernen
+BookDetail.btnRemoveCopy.text=Ausgew\u00E4hlte entfernen (V)
 BookDetail.btnReset.text=Zur\u00FCcksetzen
 BookDetail.btnSave.text=Speichern
 BookDetail.btnAdd.desc=Fügt ein Exemplar dieses Buchs zur Bibliothek hinzu
